# dvrescue

./: CMakeLists.txt  Jenkinsfile
Project/CMake/: CPackConfig.cmake  changelog
Source/: CMakeLists.txt
ci/jenkins/: configurations.yml
